# Launcher_minecraft_2.0

./: README.md  angular.json  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  xboxlive.rs
src/app/: app-router.module.ts  app.component.ts  app.module.ts  xboxlive.service.spec.ts  xboxlive.service.ts
src/app/iniciar-minecraft/: iniciar-minecraft.component.html  iniciar-minecraft.component.spec.ts  iniciar-minecraft.component.ts
src/app/login/: login.component.html  login.component.ts
